small change html, started keyboard nav dropdown

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
       
     <fieldset id="users" class="field">
       <div>
-        <label for="users-autocomplete">users</label>
+        <label for="users-autocomplete">Users</label>
         <div class="autocomplete">
           <input id="users-autocomplete" type="text" autocomplete="off" placeholder="Select a user" />
           <div id="users-results" class="autocomplete__results">
